test/classes/initializers/phase1/dynamicThis/childMethod.good
childMethod.chpl:17: In initializer:
childMethod.chpl:20: error: cannot call method "childMethod" on type "Child" before "init this"
childMethod.chpl:20: note: before "init this" "this" is treated as parent type "Parent" for method calls
